--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
         <script src="beluga2.js"></script>
         <script src="./js/Model/AlunoModel.js"></script>
+        <script src="./js/Model/ListaAlunosModel.js"></script>
         
         
     </body>
