--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <script src="beluga2.js"></script>
         <script src="./js/Model/AlunoModel.js"></script>
         <script src="./js/Model/ListaAlunosModel.js"></script>
+        <script src="./js/View/ListaAlunosView.js"></script>
         
         
     </body>
