--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <script src="./js/Model/AlunoModel.js"></script>
         <script src="./js/Model/ListaAlunosModel.js"></script>
         <script src="./js/View/ListaAlunosView.js"></script>
+        <script src="./js/Controller/ListaAlunosController.js"></script>
         <script src="./js/app.js"></script>
         
         
